<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCC"
    tools:context=".ui.neighbour_list.ProfileNeighbourActivity"
    tools:ignore="MissingPrefix, MissingConstraints, UnusedAttribute ">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintHeight_percent="0.40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cardInfo"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:padding="8dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        tools:text="@tools:sample/first_names" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_fav_neighbour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:tint="#ffff00"
        app:backgroundTint="#fff"
        app:srcCompat="@drawable/ic_star_border_white_24dp"
        app:elevation="20dp"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/avatar" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/card_margin_top"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintBottom_toTopOf="@id/cardAboutMe">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InfosTextViewTitre"
                    android:text="@id/name"
                    tools:text="@tools:sample/first_names" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InfosTextView"
                    android:drawableTint="@color/colorAccent"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:drawablePadding="15dp"
                    tools:text="Saint pierre du mont à 5km gre zgergzergz ergz er" />

                <TextView
                    android:id="@+id/phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/InfosTextView"
                    android:drawableTint="@color/colorAccent"
                    android:drawableStart="@drawable/ic_baseline_local_phone_24"
                    android:drawablePadding="15dp"
                    tools:text="+33 6 86 57 90 14" />

                <TextView
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InfosTextView"
                    android:drawableTint="@color/colorAccent"
                    android:drawableStart="@drawable/ic_baseline_language_24"
                    android:drawablePadding="15dp"
                    tools:text="wwww.facebook.fr/carolinerezrazeraezrazerazerazera" />


            </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardAboutMe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/card_margin_top"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/cardInfo"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleAboutme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/InfosTextViewTitre"
                android:text="@string/abnoutMe" />

            <TextView
                android:id="@+id/aboutme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InfosTextView"
                android:scrollbars="vertical"
                tools:text="@tools:sample/lorem/random" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>